<resources>
    <string name="app_name">Onuchokri Blood</string>
    <string name="title_activity_scrolling">Blood Donor List</string>
    <string name="about">Md. Sumon Sarder\n
Email: sumonsorder953@gmail.com\n\n
I am studying in Computer Science and Engineering at Daffodil International University.
I am an Android developer. Passionate by mobile technologies. Ideas maker,curious and nature lover.</string>
    <string name="about_two">Mijanur Rahman Raju\n
Email: crypter.r.r@gmail.com\n\n
Studying in Computer Science and Engineering at Daffodil International University. Passionate about android app development. Love to build android applications.</string>
    "Material is the metaphor.\n\n
<string name="action_settings">Settings</string>
<string name="donate_blood">রক্ত দিন, জীবন বাচান</string><string name="update_donation_date">Update Donation Date</string><string name="already_a_member_have_you_donated_your_blood">Already a Member,Have you Donated your blood?</string><string name="add_as_a_donor">Add As a Donor</string><string name="locality">Locality</string><string name="blood_group">Blood Group</string><string name="_01">01*********</string><string name="phone">Phone</string><string name="your_name">Your Name</string><string name="manage_blood_donation_date">Manage Blood Donation Date</string><string name="phone_update">Phone</string><string name="name">Name</string><string name="when_did_you_give_blood">When Did you Give Blood?</string><string name="save">Save</string><string name="blood_group_search">Blood Group</string><string name="locality_search">Locality</string><string name="search">Search</string><string name="number">Donor</string><string name="donor_number">donor Number</string><string name="available">Available</string>


<string-array name="blood_group">
<item>A+</item>
<item>A-</item>
<item>B+</item>
<item>B-</item>
<item>O+</item>
<item>O-</item>
<item>AB+</item>
<item>AB-</item>
</string-array>

<string-array name="blood_people_city">
<item>Dhaka</item>
<item>Rajshahi</item>
<item>Khulna</item>
<item>Rangpur</item>
<item>Shylet</item>
<item>Barishal</item>
<item>Chittagong</item>
</string-array>
    </resources>
