<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textView1ForList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView2ForList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_number"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:textSize="24sp"
            />



    </LinearLayout>



    <TextView
        android:id="@+id/textView3ForList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/available"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:textSize="24sp"
        android:layout_below="@id/lin"
        />

</RelativeLayout>